--- a/04 - CSS Grid Dev Tools/dev-tools-START.html
+++ b/04 - CSS Grid Dev Tools/dev-tools-START.html
@@ -25,6 +25,16 @@
   <style>
     .container {
       display: grid;
+      grid-template-columns: 100px 300px;
+      grid-auto-rows: 100px;
+      grid-gap: 10px;
+      justify-content: center;
+      align-content: center;
+
+      max-width: 1024px;
+      height: 100vh;
+      margin: 0 auto;
+      /* background-color: aqua; */
     }
   </style>
 </body>
