--- a/05 - CSS Grid Implicit vs Explicit Tracks/implicit-vs-explicit-START.html
+++ b/05 - CSS Grid Implicit vs Explicit Tracks/implicit-vs-explicit-START.html
@@ -14,11 +14,19 @@
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
   </div>
 
   <style>
     .container {
       display: grid;
+      grid-gap: 10px;
+      grid-template-columns: 150px 300px;
+      /* grid-template-rows: 150px 300px; */
+      grid-auto-rows: 150px 300px;
     }
   </style>
 </body>
