--- a/12 - auto-fit and auto-fill/auto-fit-and-auto-fill-START.html
+++ b/12 - auto-fit and auto-fill/auto-fit-and-auto-fill-START.html
@@ -14,7 +14,7 @@
     <div class="item item2">Item 02</div>
     <div class="item item3">Item 03</div>
     <div class="item item4">Item 04</div>
-    <div class="item item5">Item 05</div>
+    <!-- <div class="item item5">Item 05</div>
     <div class="item item6">Item 06</div>
     <div class="item item7">Item 07</div>
     <div class="item item8">Item 08</div>
@@ -29,7 +29,7 @@
     <div class="item item17">Item 17</div>
     <div class="item item18">Item 18</div>
     <div class="item item19">Item 19</div>
-    <div class="item item20">Item 20</div>
+    <div class="item item20">Item 20</div> -->
   </div>
 
   <style>
@@ -37,6 +37,15 @@
       display: grid;
       grid-gap: 20px;
       border: 10px solid var(--yellow);
+
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      /* grid-template-columns: repeat(auto-fit, 150px); */
+
+      /* grid-template-rows: repeat(auto-fit, 150px); */
+    }
+
+    .item4 {
+      grid-column: 5 / -1;
     }
   </style>
 </body>
