--- a/13 - Using minmax() for Responsive Grids/minmax-START.html
+++ b/13 - Using minmax() for Responsive Grids/minmax-START.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <div class="item item1">Item 01</div>
+    <div class="item item1">Item 01Item 01Item 01Item 01Item 01Item 01Item 01Item 01Item 01Item 01Item 01</div>
     <div class="item item2">Bonjour!</div>
     <div class="item item3">Item 03</div>
     <div class="item item4">Item 04</div>
@@ -21,7 +21,9 @@
       display: grid;
       grid-gap: 20px;
       border: 10px solid var(--yellow);
-      grid-template-columns: repeat(auto-fill, 150px);
+      /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
+      /* grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
+      grid-template-columns: fit-content(40%) repeat(3, 1fr);
     }
   </style>
 </body>
