--- a/14 - Grid Template Areas/area-line-names-START.html
+++ b/14 - Grid Template Areas/area-line-names-START.html
@@ -46,7 +46,20 @@
     .container {
       display: grid;
       grid-gap: 20px;
+
+      grid-template-areas: 
+        "poop poop poop poop hamb hamb hamb hamb"
+        "poop poop poop poop hamb hamb hamb hamb"
+        "poop poop poop poop hamb hamb hamb hamb"
+        "poop poop poop poop hamb hamb hamb hamb"
+      ;
     }
+    
+    .item3 {
+      grid-column: poop-start / hamb-end;
+      grid-row: hamb-end;
+    }
+
   </style>
 </body>
 
