--- a/14 - Grid Template Areas/areas-START.html
+++ b/14 - Grid Template Areas/areas-START.html
@@ -10,14 +10,14 @@
 
 <body>
   <div class="container">
-    <div class="item item1">
+    <div class="item sidebar-1">
       <p>I'm Sidebar #1</p>
     </div>
-    <div class="item item2">
+    <div class="item content">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sed.</p>
       <p>Lorem ipsum d</p>
     </div>
-    <div class="item item3">
+    <div class="item sidebar-2">
       <p>I'm Sidebar #2</p>
     </div>
     <div class="item footer">
@@ -29,6 +29,60 @@
     .container {
       display: grid;
       grid-gap: 20px;
+
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, minmax(200px, auto));
+      grid-template-areas: 
+        "sidebar-1  sidebar-1 sidebar-1 "
+        "content    content   content   "
+        "sidebar-2  sidebar-2 sidebar-2 "
+        "footer     footer    footer    "
+      ;
+      height: 100vh;
+    }
+
+    .container > * {
+      padding: 1rem;
+    }
+
+    @media (min-width: 480px) {
+      .container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, minmax(200px, auto));
+        grid-template-areas: 
+          "sidebar-1  sidebar-1 sidebar-2 "
+          "content    content   content   "
+          "footer     footer    footer    "
+        ;
+      }
+    }
+
+    @media (min-width: 910px) {
+      .container {
+        grid-template-columns: 1fr 10fr 1fr;
+        grid-template-rows: repeat(3, minmax(200px, auto));
+        grid-template-areas: 
+          "sidebar-1  content sidebar-2 "
+          "sidebar-1  content sidebar-2 "
+          "footer     footer  footer    "
+        ;
+      }
+    }
+
+    .sidebar-1 {
+      grid-area: sidebar-1;
+    }
+
+    .sidebar-2 {
+      grid-area: sidebar-2;
+    }
+
+    .content {
+      grid-area: content;
+    }
+
+    .footer {
+      grid-area: footer;
     }
   </style>
 </body>
