--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -1,103 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/style.css" />
+    <title>Nesting Grid with Album Layouts!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../assets/style.css">
-  <title>Nesting Grid with Album Layouts!</title>
-</head>
+  <body>
+    <div class="albums">
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis,
+            excepturi!
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">short.</p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+      <div class="album">
+        <div class="album__artwork"></div>
+        <div class="album__details">
+          <h2>Album Title</h2>
+          <p class="album__artist">Artist Name</p>
+          <p class="album__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed
+            sint doloremque repellat, iste debitis.
+          </p>
+        </div>
+      </div>
+    </div>
 
-<body>
+    <style>
+      .albums {
+        display: grid;
+        grid-gap: 2rem;
 
-  <div class="albums">
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=1">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, excepturi!</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=2">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">short.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=3">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=4">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=5">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=6">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=7">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=8">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=9">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=10">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed sint doloremque repellat, iste debitis.</p>
-      </div>
-    </div>
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        /* grid-auto-rows: minmax(180px, auto); */
+      }
 
-  </div>
+      .album {
+        background-color: rgba(255, 255, 255, 0.2);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        padding: 1.5rem;
 
+        display: grid;
+        grid-gap: 1rem;
+        /* grid-template-columns: repeat(3, 1fr); */
+        grid-template-columns: 150px 1fr;
+        align-items: center;
+      }
 
-  <style>
-  </style>
-</body>
+      .album__details {
+        /* grid-column: span 2; */
 
+        color: white;
+        font-weight: 100;
+      }
+
+      .album__artwork {
+        width: 100%;
+        max-width: 150px;
+        min-height: 150px;
+        background-color: gray;
+        justify-self: center;
+      }
+
+      .album__artist {
+        margin: 0;
+      }
+
+      .album__desc {
+        /* font-weight: 300; */
+        margin-top: 0.2rem;
+        max-width: 35ch;
+      }
+
+      @media (max-width: 420px) {
+        body {
+          margin: 1rem;
+        }
+
+        .albums {
+          grid-template-columns: 1fr;
+        }
+
+        .album {
+          grid-template-columns: 1fr;
+        }
+
+        .album__artwork {
+          justify-self: start;
+        }
+      }
+    </style>
+  </body>
 </html>
