--- a/20 - CSS Grid Image Gallery/image-gallery-START.html
+++ b/20 - CSS Grid Image Gallery/image-gallery-START.html
@@ -1,88 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>CSS Grid Image Gallery!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Grid Image Gallery!</title>
-</head>
-
-<body>
-
-  <div class="overlay">
-    <div class="overlay-inner">
-      <button class="close">× Close</button>
-      <img>
+  <body>
+    <div class="overlay">
+      <div class="overlay-inner">
+        <button class="close">× Close</button>
+        <img />
+      </div>
     </div>
-  </div>
 
-  <section class="gallery">
-  </section>
+    <section class="gallery"></section>
 
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+      body {
+        padding: 50px;
+        font-family: sans-serif;
+        background: linear-gradient(to right, #f93d66, #6d47d9);
+        min-height: 100vh;
+      }
 
-    body {
-      padding: 50px;
-      font-family: sans-serif;
-      background: linear-gradient(to right, #F93D66, #6D47D9);
-    }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 0 0 5px 0;
+      }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      margin: 0 0 5px 0;
-    }
+      p {
+        margin: 0 0 20px 0;
+      }
 
-    p {
-      margin: 0 0 20px 0;
-    }
+      .close {
+        background: none;
+        color: white;
+        border: 0;
+      }
 
-    .close {
-      background: none;
-      color: white;
-      border: 0;
-    }
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 100px);
+        grid-auto-rows: 100px;
+      }
 
-    .gallery {}
+      .item.v2 {
+        grid-row: span 2;
+      }
 
+      .overlay {
+        position: fixed;
+        background: hsl(0 0 0 / 0.7);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: none;
+        z-index: 2;
+      }
 
+      .overlay.open {
+        display: grid;
+      }
 
-    .overlay {
-      position: fixed;
-      background: rgba(0, 0, 0, 0.7);
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: none;
-      z-index: 2;
-    }
+      .overlay figure {
+        background: white;
+        width: 700px;
+        padding: 20px;
+      }
 
-    .overlay.open {
-      display: grid;
-    }
+      .overlay img {
+        width: 100%;
+      }
+    </style>
 
-    .overlay figure {
-      background: white;
-      width: 700px;
-      padding: 20px;
-    }
+    <script>
+      //
+      //  Variables
+      //
 
-    .overlay img {
-      width: 100%;
-    }
-  </style>
+      // DOM elements
+      const gallery = document.querySelector(".gallery");
+      const overlay = document.querySelector(".overlay");
+      const overlayImage = document.querySelector("img");
+      const overlayClose = document.querySelector(".close");
 
-  <script>
-  </script>
-</body>
+      //
+      //  Functions
+      //
 
+      function generateHTML(h, v) {
+        return `
+          <div class="item h${h} v${v}">
+            <img src="images/${randomNumber(12)}.jpg">
+            <div class="item__overlay">
+              <button>View →</button>  
+            </div>
+          </div>
+        `;
+      }
+
+      function randomNumber(limit) {
+        return Math.floor(Math.random() * limit) + 1;
+      }
+
+      const digits = Array.from({ length: 50 }, () => [
+        randomNumber(4),
+        randomNumber(4),
+      ]);
+
+      const html = digits.map(generateHTML).join("");
+      gallery.innerHTML = html;
+    </script>
+  </body>
 </html>
